--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "movie"
 version = "0.1.0"
 description = ""
-authors = ["Your Name <you@example.com>"]
+authors = ["Aminul Chowdhury <aminul.babor@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
@@ -11,6 +11,7 @@ pytest = "^8.1.1"
 django = "^5.0.4"
 django-extensions = "^3.2.3"
 black = "^24.4.0"
+django-debug-toolbar = "^4.3.0"
 
 
 [build-system]
