--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,11 @@ django = "^5.0.4"
 django-extensions = "^3.2.3"
 black = "^24.4.0"
 django-debug-toolbar = "^4.3.0"
+sentry-sdk = "^1.45.0"
 
+
+[tool.poetry.group.dev.dependencies]
+pytest-structlog = "^0.8"
 
 [build-system]
 requires = ["poetry-core"]
